--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -8,8 +8,11 @@
 
 <div>
     <table>
-        <tbody th:>
-        <h1 th:text="${}"></h1>
+        <tbody>
+        <div th:each="post : ${posts}">
+            <p th:text="${post.title}" />
+        </div>
+<!--        <h1 th:text=${/index}></h1>-->
         </tbody>
     </table>
 </div>
