--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,9 +9,9 @@
 <div>
     <table>
         <tbody>
-        <div th:each="post : ${posts}">
-            <p th:text="${post.title}" />
-        </div>
+<!--        <div th:each="post : ${posts.post}">-->
+<!--            <p th:text="${post.title}" />-->
+<!--        </div>-->
 <!--        <h1 th:text=${/index}></h1>-->
         </tbody>
     </table>
