--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Posts</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8" />-->
+<!--    <title>Posts</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<div>
-    <table>
-        <tbody>
-<!--        <div th:each="post : ${posts.post}">-->
-<!--            <p th:text="${post.title}" />-->
-<!--        </div>-->
-<!--        <h1 th:text=${/index}></h1>-->
-        </tbody>
-    </table>
-</div>
+<!--<div>-->
+<!--    <table>-->
+<!--        <tbody>-->
+<!--&lt;!&ndash;        <div th:each="post : ${posts.post}">&ndash;&gt;-->
+<!--&lt;!&ndash;            <p th:text="${post.title}" />&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        <h1 th:text=${/index}></h1>&ndash;&gt;-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--</div>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
