--- a/src/main/resources/templates/Hello.html
+++ b/src/main/resources/templates/Hello.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1><span>HELLO!</span></h1>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1><span>HELLO!</span></h1>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
