--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,23 +1,23 @@
 
 
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Dice</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8" />-->
+<!--    <title>Dice</title>-->
+<!--</head>-->
+<!--<body>-->
 
 
 
 
-<form th:action="@{/post/create}" th:method="post" th:object="${post}">
-    <label>Title</label>
-    <label for="post_title"></label><input type="text" th:field="*{title}" id="post_title" class="field"/>
-    <label>Description</label>
-    <label for="description"></label><input type="text" th:field="*{description}" id="description" class="field"/>
-    <button>Submit</button>
-</form>
+<!--<form th:action="@{/post/create}" th:method="post" th:object="${post}">-->
+<!--    <label>Title</label>-->
+<!--    <label for="post_title"></label><input type="text" th:field="*{title}" id="post_title" class="field"/>-->
+<!--    <label>Description</label>-->
+<!--    <label for="description"></label><input type="text" th:field="*{description}" id="description" class="field"/>-->
+<!--    <button>Submit</button>-->
+<!--</form>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
