--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -9,10 +9,10 @@
 <!--<div>-->
 <!--    <table>-->
 <!--        <tbody>-->
-<!--&lt;!&ndash;        <div th:each="post : ${posts.post}">&ndash;&gt;-->
-<!--&lt;!&ndash;            <p th:text="${post.title}" />&ndash;&gt;-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;        <h1 th:text=${/index}></h1>&ndash;&gt;-->
+<!--        <div th:each="post : ${posts}">-->
+<!--            <p th:text="${post.title}" />-->
+<!--        </div>-->
+
 <!--        </tbody>-->
 <!--    </table>-->
 <!--</div>-->
