--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -7,9 +7,9 @@
 <body>
 
 <!--/*@thymesVar id="roll" type="java"*/-->
-<h1 th:text="${roll}"></h1>
+<h1 th:text = "${result} ?: 'Roll the dice!'" ></h1>
 
-<form action="/roll-dice" method="post">
+<form th:action="@{/roll-dice}" method="POST">
     <input type="text" name="guess" class="field" />
     <button>Press here to Guess</button>
 </form>
