issues resolving hibernate and javax persistence

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -5,6 +5,10 @@
     <title>Dice</title>
 </head>
 <body>
+<div th:hea
+<div th:replace = "fragmentfilepath :: navbar">
+</div>
+
 
 <form th:action="@{/post/create}" th:method="post" th:object="${post}">
     <label>Title</label>
