--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Dice</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8" />-->
+<!--    <title>Dice</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<!--/*@thymesVar id="roll" type="java"*/-->
-<h1 th:text = "${result} ?: 'Roll the dice!'" ></h1>
+<!--&lt;!&ndash;/*@thymesVar id="roll" type="java"*/&ndash;&gt;-->
+<!--<h1 th:text = "${result} ?: 'Roll the dice!'" ></h1>-->
 
-<form th:action="@{/roll-dice}" method="POST">
-    <input type="text" name="guess" class="field" />
-    <button>Press here to Guess</button>
-</form>
+<!--<form th:action="@{/roll-dice}" method="POST">-->
+<!--    <input type="text" name="guess" class="field" />-->
+<!--    <button>Press here to Guess</button>-->
+<!--</form>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
