repositories and JPA

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -5,7 +5,7 @@
     <title>Dice</title>
 </head>
 <body>
-<div th:hea
+<!--<div th:hea-->
 <div th:replace = "fragmentfilepath :: navbar">
 </div>
 
