--- a/src/resources/templates/posts/index.html
+++ b/src/resources/templates/posts/index.html
@@ -5,14 +5,13 @@
     <title>Posts</title>
 </head>
 <body>
-
+<div th:replace="partial/navbar.html :: navbar"></div>
 <div>
     <table>
         <tbody>
         <div th:each="post : ${posts}">
             <p th:text="${post.title}" />
         </div>
-
         </tbody>
     </table>
 </div>
